CHANGELOG

2.1.17
UTIL:
* type=certificate | extend to TemplateStack
* introduce class SharedGatewayStore | extend different classes to support SharedGateway
* type=zone | extend with SharedGateway
* type=rule | extend with SharedGateway
* type=service | improvement for SharedGateway - class VirtualSystem
* develop script "shared_gateway.php" | introduction

BUGFIX:
* type=ssh-connector in=admin@MGMT-IP setcommand-file=set-commands.txt | bugfix to correctly send set commands

GENERAL:


2.1.16  (20230908)
UTIL:
* type=address | new 'filter=(name same.as.region.predefined)'
* class UTIL | extend if API mode - with App-id/AV/WF/Threat version info
* type=address | introduce 'filter=(tag is.set)'
* type=xml-issue | extend with rule tag object validation for twice set the same tag object
* introduce GroupTagRuleContainer to all Rule classes

BUGFIX:
* class Sub | bugfix for default-securiy-rules | if partial config is already available
* type=address-merger | bugfix to not delete TAG object from upperlevel if TAG object with same name exist at childDG
* type=address/service actions=move | bugfix if group with same name already exist - correctly skip movement
* class PANConf | fix for PHP 8.2
* type=address/service actions=move:shared location=any - bugfix for Firewall config
* type=rule-merger | bugfix to not add description twice, which exceeds description length to >1024
* type=tag actions=delete 'filter=(object is.unused) | bugfix for group-tag used in Rules, reference missing
* introduce GroupTagRulecontainer - to fix type=tag-merger issue if group-tag is used
* class PANConf - bugfix for type=stats on FW config for tmp/ghost object count on 'shared'
* type=XYZ outputformatset=setcommand.txt | bugfix to always have correct xPath availalble for set commands
* bugfix - related to TAG objects where name include character '(' and/or ')' - final fix for tag-merger including method createTag()