@@ -8,6 +8,7 @@ UTIL:
 * type=rule | extend with SharedGateway
 * type=service | improvement for SharedGateway - class VirtualSystem
 * develop script "shared_gateway.php" | introduction
+* type=address in=api://192.168.55.129 'actions=combine-addressgroups:{NEW_GROUP_NAME},true' 'filter=(name regex /{FILTER}/)'
 
 BUGFIX:
 * type=ssh-connector in=admin@MGMT-IP setcommand-file=set-commands.txt | bugfix to correctly send set commands
